force-app/main/default/objects/OpportunityLineItem/fields/Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Type__c</fullName>
    <formula>SBQQ__QuoteLine__r.Dimension_Type__c</formula>
    <label>Dimension Type</label>
    <type>Text</type>
</CustomField>