force-app/main/default/objects/OpportunityLineItem/fields/Expected_MRC__c.field-meta.xml
<CustomField>
    <fullName>Expected_MRC__c</fullName>
    <label>Expected Unit MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>