force-app/main/default/objects/OpportunityLineItem/fields/ExpectedARC__c.field-meta.xml
<CustomField>
    <fullName>ExpectedARC__c</fullName>
    <inlineHelpText>Annual Contract Value</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>