force-app/main/default/objects/OpportunityLineItem/fields/ExpectedARC_Formatted__c.field-meta.xml
<CustomField>
    <fullName>ExpectedARC_Formatted__c</fullName>
    <formula>ExpectedARC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpectedARC Formatted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>