force-app/main/default/objects/OpportunityLineItem/fields/ExpectedOTC__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOTC__c</fullName>
    <label>Expected Unit OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>