force-app/main/default/objects/OpportunityLineItem/fields/Number_of_Months_Formula__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_Formula__c</fullName>
    <formula>Opportunity.Number_Of_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Months Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>