force-app/main/default/objects/OpportunityLineItem/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <formula>CASESAFEID(Opportunity.Pricebook2Id)</formula>
    <label>Pricebook Id</label>
    <type>Text</type>
</CustomField>