force-app/main/default/objects/OpportunityLineItem/fields/Quote_Line_Final_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Final_Unit_Price__c</fullName>
    <formula>SBQQ__QuoteLine__r.Final_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Final Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>