force-app/main/default/objects/OpportunityLineItem/fields/Segment_Label__c.field-meta.xml
<CustomField>
    <fullName>Segment_Label__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__SegmentLabel__c</formula>
    <label>Segment Label</label>
    <type>Text</type>
</CustomField>