force-app/main/default/objects/OpportunityLineItem/validationRules/Quantity_Should_be_1_for_Others_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Should_be_1_for_Others_Products</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( RIGHT(Product2.Name , 6), &quot;Others&quot;) &amp;&amp; Quantity &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Quantity can only be 1 for &quot;Others&quot; products</errorMessage>
</ValidationRule>